<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4018.2">
  <GVL Name="GVL_IO_HOR" Id="{fe25734d-85d1-49ba-b658-f299a35b1959}">
    <Declaration><![CDATA[VAR_GLOBAL
(**************************************************************************)
(*Horizontal IO *)

IW_241DI1					AT %IB200:WORD;						    
I_HOR_TopCv_InvRdy			AT %IX200.0	:BOOL;	 (* 	HORIZONTAL TOP CONVEYOR INVERTER READY	*)
I_HOR_BotCv_InvRdy			AT %IX200.1	:BOOL;	 (* 	HORIZONTAL BOTTOM CONVEYOR INVERTER READY	*)
I_HLC_SC_OK					AT %IX200.2	:BOOL;	 (* 	HORIZONTAL EXIT LIGHT CURTAIN OK	*)
I_EStop_HorL				AT %IX200.3	:BOOL;	 (* 	EMERGENCY STOP FOR HORIZONTAL LEFT	*)
I_EStop_HorR				AT %IX200.4	:BOOL;	 (* 	EMRGENCT STOP FOR HORIZONTAL RIGHT	*)
I_EStop_HorExit				AT %IX200.5	:BOOL;	 (* 	EMERGENCY STOP FOR HORZONTAL EXIT	*)
I_CO_PusherReady			AT %IX200.6	:BOOL;	 (* 	PUSHER READY	*)
I_EStop_Collator			AT %IX200.7	:BOOL;	 (* 	EMERGENCY STOP FOR COLLATOR	*)

IX2010						AT %IX201.2	:BOOL;	 (* 	SPARE	*)
IX2011						AT %IX201.3	:BOOL;	 (* 	SPARE	*)
IX2012						AT %IX201.2	:BOOL;	 (* 	SPARE	*)
IX2013						AT %IX201.3	:BOOL;	 (* 	SPARE	*)
IX2014						AT %IX201.4	:BOOL;	 (* 	SPARE	*)
IX2015						AT %IX201.5	:BOOL;	 (* 	SPARE	*)
IX2016						AT %IX201.6	:BOOL;	 (* 	SPARE	*)
IX2017						AT %IX201.7	:BOOL;	 (* 	SPARE	*)


(**************************************************************************)
(*Horizontal Field IO *)
IW_260A1					AT %IB210:WORD;
I_HOR_Entry_Cv_Present		AT %IX210.0	:BOOL;	 (* 	HORIZONTAL PRODUCT PRESENCE AT ENTRY CONVEYOR SENSOR	*)
I_HOR_TapeL_Present_PE		AT %IX210.1	:BOOL;	 (* 	HORIZONTAL TAPE LEFT PRESENT SENSOR	*)
I_HOR_TapeR_Present_PE		AT %IX210.2	:BOOL;	 (* 	HORIZONTAL TAPE RIGHT PRESENT SENSOR	*)
I_HOR_DnStream_Cv_Full		AT %IX210.3	:BOOL;	 (* 	HORIZONTAL EXIT CONVEYOR FULL SENSOR	*)
I_HOR_Left_Door				AT %IX210.4	:BOOL;	 (* 	HORIZONTAL EXIT LEFT DOOR SENSOR	*)
I_HOR_Right_Door			AT %IX210.5	:BOOL;	 (* 	HORIZONTAL EXIT RIGHT DOOR SENSOR	*)
I_HOR_TapeL_Empty_PE		AT %IX210.6	:BOOL;	 (* 	HORIZONTAL TAPE LEFT EMPTY SENSOR	*)
I_HOR_TapeR_Empty_PE		AT %IX210.7	:BOOL;	 (* 	HORIZONTAL TAPE RIGHT EMPTY SENSOR	*)

(**************************************************************************)
(*Horizontal Field IO *)
IW_261A1					AT %IB211:WORD;
I_HOR_Tilt_In_Cv_Present	AT %IX211.0	:BOOL;	 (* 	HORIZONTAL TILT CONVEYOR IN SENSOR	*)
I_HOR_Tilt_Out_Cv_present	AT %IX211.1	:BOOL;	 (* 	HORIZONTAL TILT CONVEYOR OUT SENSOR	*)
I_HOR_TiltDoor				AT %IX211.2	:BOOL;	 (* 	HORIZONTAL TILT UNIT DOOR SENSOR	*)


QW_241DO1					AT %QB200:WORD;						    
QX2000						AT %QX200.0	:BOOL;	 (* 	SPARE	*)
O_HOR_LC_Mute1				AT %QX200.1	:BOOL;	 (* 	ELEVATOR - MUTE 1 LIGHT CURTAIN	*)
O_HOR_LC_Mute2				AT %QX200.2	:BOOL;	 (* 	ELEVATOR - MUTE 2 LIGHT CURTAIN	*)
O_HOR_TiltCV1_On			AT %QX200.3	:BOOL;	 (* 	Tilt Conveyer 1	*)
O_HOR_TiltCV2_On			AT %QX200.4	:BOOL;	 (* 	Tilt Conveyer 2	*)
QX2005						AT %QX200.5	:BOOL;	 (* 	SPARE	*)
QX2006						AT %QX200.6	:BOOL;	 (* 	SPARE	*)
QX2007						AT %QX200.7	:BOOL;	 (* 	SPARE	*)					

O_HOR_TopCv_Mtr_Run			AT %QX201.0	:BOOL;	 (* 	HORIZONTAL TOP CONVEYOR INVERTER RUN	*)
O_HOR_TopCv_Mtr_Dirc		AT %QX201.1	:BOOL;	 (* 	HORIZONTAL TOP CONVEYOR INVERTER DIRECTION	*)
O_HOR_TopCv_Mtr_Spd1		AT %QX201.2	:BOOL;	 (* 	HORIZONTAL TOP CONVEYOR SPEED BIT1	*)
O_HOR_TopCv_Mtr_Spd2		AT %QX201.3	:BOOL;	 (* 	HORIZONTAL TOP CONVEYOR SPEED BIT2	*)
O_HOR_BotCv_Mtr_Run			AT %QX201.4	:BOOL;	 (* 	HORIZONTAL BOTTOM CONVEYOR INVERTER RUN	*)
O_HOR_BotCv_Mtr_Dirc		AT %QX201.5	:BOOL;	 (* 	HORIZONTAL BOTTOM CONVEYOR INVERTER DIRECTION	*)
O_HOR_BotCv_Mtr_Spd1		AT %QX201.6	:BOOL;	 (* 	HORIZONTAL BOTTOM CONVEYOR SPEED BIT1	*)
O_HOR_BotCv_Mtr_Spd2		AT %QX201.7	:BOOL;	 (* 	HORIZONTAL BOTTOM CONVEYOR SPEED BIT2	*)


I_HOR_90Deg_Tilt_Cly_Up		AT %IX211.0	:BOOL;	(*		HORIZONTAL 90 Deg TILT CYLINDER UP SENSOR *)
I_HOR_90Deg_Tilt_Cly_Dn		AT %IX211.1	:BOOL;	(*		HORIZONTAL 90 Deg TILT CYLINDER DOWN SENSOR *)
I_HOR_90Deg_Full_PE			AT %IX211.2	:BOOL;	(*		HORIZONTAL 90 Deg TILT FULL SENSOR	*)

O_HOR_90Deg_Cyl_Up			AT	%QX211.0 :BOOL;	(*		HORIZONTAL	90 Deg TILT CYLINDER UP	*)
O_HOR_90Deg_Cyl_Dn			AT	%QX211.1 :BOOL;	(*		HORIZONTAL	90 Deg TILT CYLINDER DOWN	*)

END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>